--- a/index.html
+++ b/index.html
@@ -215,6 +215,33 @@
                     </table>
                 </div>
             </section>
+            <section id="galeria">
+                <h2>GALERIA</h2>
+                <div class="galeria">
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/aulas-online.jpg">
+                        <p>Assistindo uma de nossas aulas online</p>
+                    </div>
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/codigos-alunos.jpg">
+                        <p>Linhas de códio de um de nossos alunos</p>
+                    </div>
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/trabalho-em-grupo.jpg">
+                        <p>Trabalho desenvolvido em grupo</p>
+                    </div>
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/aulas-online.jpg">
+                        <p>Assistindo uma de nossas aulas online</p>
+                    </div>
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/aulas-online.jpg">
+                        <p>Assistindo uma de nossas aulas online</p>
+                    </div>
+                    <div class="galeria-card">
+                        <img src="./assets/img/galeria/aulas-online.jpg">
+                        <p>Assistindo uma de nossas aulas online</p>
+                    </div>
         </main>
     </div>
 
