--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
+
+    <link rel="stylesheet" href="./assets/css/global.css">
+
     <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/sobre.css">
+    <link rel="stylesheet" href="./assets/css/curso.css">
+    <link rel="stylesheet" href="./assets/css/plano.css">
+    <link rel="stylesheet" href="./assets/css/galeria.css">
+    <link rel="stylesheet" href="./assets/css/contato.css">
+
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <title>Aratech Informática</title>
 </head>
@@ -231,17 +241,44 @@
                         <p>Trabalho desenvolvido em grupo</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/aulas-online.jpg">
-                        <p>Assistindo uma de nossas aulas online</p>
+                        <img src="./assets/img/galeria/alunos-ia.jpg">
+                        <p>Figura de alunos usando inteligência artificial</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/aulas-online.jpg">
-                        <p>Assistindo uma de nossas aulas online</p>
+                        <img src="./assets/img/galeria/site-start-up.jpg">
+                        <p>Desenvolvimento de web site para start-up</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/aulas-online.jpg">
-                        <p>Assistindo uma de nossas aulas online</p>
+                        <img src="./assets/img/galeria/trabalho-em-grupo-online.jpg">
+                        <p>Trabalho desenvolvido em grupo online</p>
                     </div>
+            </section>
+            <section id="contato">
+                <h2>Contato</h2>
+                <div class="contato-main">
+                    <div class="formulario">
+                        <form action="">
+                            <div>
+                                <label for="nome">Seu nome Completo</label>
+                                <input type="text" name="nome" id="nome">
+                            </div>
+                            <div>
+                                <label for="telefone">Digite seu número de Telefone</label>
+                                <input type="tel" name="telefone" id="telefone">
+                            </div>
+                            <div>
+                                <label for="email">Seu Email</label>
+                                <input type="text" name="email" id="email">
+                            </div>
+                            <div>
+                                <label for="mensagem">Sua mensagem</label>
+                                <textarea name="mensagem" id="mensagem"></textarea>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="image"><img src="./assets/img/galeria/aulas-online.jpg" alt=""></div>
+                </div>
+            </section>
         </main>
     </div>
 
