--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
                                 <label for="mensagem">Sua mensagem</label>
                                 <textarea name="mensagem" id="mensagem"></textarea>
                             </div>
+                            <div>
+                                <input type="submit" value="Enviar">
+                            </div>
                         </form>
                     </div>
                     <div class="image"><img src="./assets/img/galeria/aulas-online.jpg" alt=""></div>
