estilizacoes em aula

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/curso.css">
     <link rel="stylesheet" href="./assets/css/plano.css">
     <link rel="stylesheet" href="./assets/css/galeria.css">
+    <link rel="stylesheet" href="./assets/css/rodape.css">
     <link rel="stylesheet" href="./assets/css/contato.css">
 
     <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -275,18 +276,27 @@
                                 <textarea name="mensagem" id="mensagem"></textarea>
                             </div>
                             <div>
-                                <input type="submit" value="Enviar">
+                                <input type="submit" value="Enviar" id="form-button">
                             </div>
                         </form>
                     </div>
-                    <div class="image"><img src="./assets/img/galeria/aulas-online.jpg" alt=""></div>
+                    <div class="image"><img src="./assets/img/codificando.jpg" alt=""></div>
                 </div>
             </section>
         </main>
     </div>
 
     <footer id="rodape">
-        <p>© 2025 Desenvolvido por <span>Vinícius Inocêncio</span>. Alguns direitos reservados.</p>
+        <div class="noticias">
+            noticias
+        </div>
+        <div class="informacoes">
+            informacoes
+        </div>
+        <div class="desenvolvedor">
+            <p>© 2025 Desenvolvido por <span>Vinícius Inocêncio</span>. Alguns direitos reservados.</p>
+        </div>
+
     </footer>
 
     <script src="./assets/js/script.js"></script>
