--- a/index.html
+++ b/index.html
@@ -265,15 +265,18 @@
                         <form action="">
                             <div>
                                 <label for="nome">Seu nome Completo</label>
-                                <input type="text" name="nome" id="nome">
+                                <input type="text" name="nome" id="nome" class="input">
+                                <p>Informe um nome.</p>
                             </div>
                             <div>
                                 <label for="telefone">Digite seu número de Telefone</label>
-                                <input type="tel" name="telefone" id="telefone">
+                                <input type="tel" name="telefone" id="telefone" class="input">
+                                <p>Informe um número de telefone.</p>
                             </div>
                             <div>
-                                <label for="email">Seu Email</label>
-                                <input type="text" name="email" id="email">
+                                <label for="email">Seu E-mail</label>
+                                <input type="text" name="email" id="email" class="input">
+                                <p>Informe um E-mail.</p>
                             </div>
                             <div>
                                 <label for="mensagem">Sua mensagem</label>
@@ -308,10 +311,18 @@
             <div class="redes-sociais">
                 <h5 class="titulo-rodape">Redes sociais</h5>
                 <ul>
-                    <li><a href=""><img src="./assets/img/redes-sociais/facebook.png"></a><p>Facebook</p></li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/instagram.png"></a><p>Facebook</p></li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/whatsapp.png"></a><p>Facebook</p></li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/x.png"></a><p>Facebook</p></li>
+                    <li><a href=""><img src="./assets/img/redes-sociais/facebook.png"></a>
+                        <p>Facebook</p>
+                    </li>
+                    <li><a href=""><img src="./assets/img/redes-sociais/instagram.png"></a>
+                        <p>Facebook</p>
+                    </li>
+                    <li><a href=""><img src="./assets/img/redes-sociais/whatsapp.png"></a>
+                        <p>Facebook</p>
+                    </li>
+                    <li><a href=""><img src="./assets/img/redes-sociais/x.png"></a>
+                        <p>Facebook</p>
+                    </li>
                 </ul>
             </div>
         </div>
