estilo feito em aula

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
     <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/responsive-rodape.css">
 
     <title>Aratech Informática</title>
 </head>
@@ -311,17 +312,21 @@
             <div class="redes-sociais">
                 <h5 class="titulo-rodape">Redes sociais</h5>
                 <ul>
-                    <li><a href=""><img src="./assets/img/redes-sociais/facebook.png"></a>
-                        <p>Facebook</p>
+                    <li><a href=""><img src="./assets/img/redes-sociais/facebook.png">
+                            <p>Facebook</p>
+                        </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/instagram.png"></a>
-                        <p>Facebook</p>
+                    <li><a href=""><img src="./assets/img/redes-sociais/instagram.png">
+                            <p>Instagram</p>
+                        </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/whatsapp.png"></a>
-                        <p>Facebook</p>
+                    <li><a href=""><img src="./assets/img/redes-sociais/whatsapp.png">
+                            <p>Whatsapp</p>
+                        </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/x.png"></a>
-                        <p>Facebook</p>
+                    <li><a href=""><img src="./assets/img/redes-sociais/x.png">
+                            <p>X (antigo Twitter)</p>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -332,11 +337,16 @@
             <p>Arapiraca - AL, 57304-240</p>
             <p>E-mail: aratech.informatiac@gmail.com</p>
             <p>Número: (82) 3522-8300</p>
-            <p>Termos de Uso e Política de Privacidade</p>
+        </div>
+        <div class="termos">
+            <a href="">
+                <p>Termos de Uso e Política de Privacidade</p>
+            </a>
         </div>
     </footer>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/form.js"></script>
+    <script src="./assets/js/menu.js"></script>
 </body>
 
 </html>
