--- a/index.html
+++ b/index.html
@@ -312,11 +312,13 @@
             <div class="redes-sociais">
                 <h5 class="titulo-rodape">Redes sociais</h5>
                 <ul>
-                    <li><a href=""><img src="./assets/img/redes-sociais/facebook.png">
+                    <li><a href="https://www.facebook.com/senaialagoas" target="_blank"><img
+                                src="./assets/img/redes-sociais/facebook.png">
                             <p>Facebook</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/instagram.png">
+                    <li><a href="https://www.instagram.com/senaialagoas" target="_blank"><img
+                                src="./assets/img/redes-sociais/instagram.png">
                             <p>Instagram</p>
                         </a>
                     </li>
@@ -339,9 +341,15 @@
             <p>Número: (82) 3522-8300</p>
         </div>
         <div class="termos">
-            <a href="">
-                <p>Termos de Uso e Política de Privacidade</p>
-            </a>
+                <a href="./pages/termos-uso.html">
+                    <h5 class="titulo-rodape">Termos de Uso</h5>
+                </a>
+                <br>
+                <a href="./pages/politicas-privacidade.html">
+                    <h5 class="titulo-rodape">Política de Privacidade</h5>
+                </a>
+            <p>© 2025 Todos os direitos resercados à Aratech Informática.</p>
+            <p>Desenvolvido por <span>Vinícius Inocêncio</span></p>
         </div>
     </footer>
 
