--- a/pages/politicas-privacidade.html
+++ b/pages/politicas-privacidade.html
@@ -13,9 +13,9 @@
 
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <link rel="stylesheet" href="../assets/css/responsive-rodape.css">
-    
 
-    <title>Termos de Uso</title>
+
+    <title>Políticas de Privacidade</title>
 </head>
 
 <body>
@@ -42,58 +42,58 @@
         </header>
         <main id="principal">
             <section id="termos-uso">
-                <h1>Termos de Uso – Aratech Informática</h1>
+                <h1>Política de Privacidade – Aratech Informática</h1>
                 <p><strong>Última atualização: 18/08/2025</strong></p>
-                <p>Bem-vindo ao site da <strong>Aratech Informática</strong>. Ao acessar, navegar ou utilizar qualquer
-                    funcionalidade disponível neste site, você declara que leu, compreendeu e concorda em cumprir estes
-                    Termos de Uso. Caso não concorde, recomendamos que não utilize este site.</p>
+                <p>A presente Política de Privacidade tem como objetivo explicar de forma clara e transparente como a
+                    <strong>Aratech Informática</strong> coleta, utiliza, armazena e protege os dados pessoais
+                    fornecidos pelos usuários deste site.</p>
 
-                <h2>1. Uso do Site</h2>
-                <p>O conteúdo deste site tem caráter informativo e educacional, sendo destinado a apresentar a empresa,
-                    seus cursos e serviços.</p>
-                <p>O usuário compromete-se a utilizar o site apenas para fins legais e de acordo com a legislação
-                    vigente.</p>
-                <p>É proibido utilizar este site para inserir ou transmitir vírus, violar direitos de propriedade
-                    intelectual, ou coletar informações pessoais de terceiros sem autorização.</p>
+                <h2>1. Coleta de Informações</h2>
+                <p>Coletamos dados pessoais fornecidos voluntariamente pelo usuário, como nome, telefone, e-mail e
+                    mensagem enviados por meio do formulário de contato.</p>
+                <p>Podemos coletar automaticamente informações de navegação, como endereço IP, tipo de dispositivo,
+                    navegador utilizado e páginas acessadas, apenas para fins estatísticos e de melhoria do site.</p>
 
-                <h2>2. Propriedade Intelectual</h2>
-                <p>Todos os textos, imagens, logotipos, marcas, vídeos, cursos, apostilas, materiais gráficos e demais
-                    conteúdos disponíveis neste site são de propriedade da <strong>Aratech Informática</strong>, salvo
-                    indicação em contrário.</p>
-                <p>É vedada a cópia, reprodução, modificação, distribuição, exibição pública ou uso comercial sem
-                    autorização prévia e por escrito da Aratech Informática.</p>
+                <h2>2. Uso das Informações</h2>
+                <p>As informações coletadas são utilizadas para:</p>
+                <p>- Responder a solicitações e contatos realizados pelo usuário;<br>
+                    - Oferecer informações sobre cursos e serviços;<br>
+                    - Melhorar a experiência de navegação no site;<br>
+                    - Cumprir obrigações legais e regulatórias.</p>
 
-                <h2>3. Serviços e Cursos</h2>
-                <p>As informações sobre cursos, planos e valores disponibilizadas no site podem ser atualizadas ou
-                    alteradas a qualquer momento, sem aviso prévio.</p>
-                <p>A matrícula em cursos e o acesso a serviços estão sujeitos à celebração de contrato específico entre
-                    o aluno e a Aratech Informática.</p>
-                <p>O certificado de conclusão será emitido apenas para alunos que cumprirem os requisitos acadêmicos
-                    definidos pela instituição.</p>
+                <h2>3. Compartilhamento de Dados</h2>
+                <p>A Aratech Informática não compartilha dados pessoais com terceiros, exceto quando:</p>
+                <p>- Houver consentimento expresso do usuário;<br>
+                    - For necessário para cumprimento de exigências legais ou ordens judiciais;<br>
+                    - Estiver relacionado à prestação de serviços essenciais ao funcionamento do site, respeitando
+                    sempre a confidencialidade.</p>
 
-                <h2>4. Limitação de Responsabilidade</h2>
-                <p>A Aratech Informática não se responsabiliza por problemas técnicos, falhas de acesso ou
-                    indisponibilidade temporária do site.</p>
-                <p>Não nos responsabilizamos por conteúdos de sites externos acessados por meio de links
-                    disponibilizados aqui.</p>
-                <p>O uso inadequado das informações publicadas neste site é de inteira responsabilidade do usuário.</p>
+                <h2>4. Armazenamento e Segurança</h2>
+                <p>Adotamos medidas técnicas e organizacionais adequadas para proteger os dados pessoais contra perda,
+                    roubo, acesso não autorizado, divulgação ou modificação.</p>
+                <p>Os dados coletados serão armazenados apenas pelo tempo necessário para as finalidades descritas nesta
+                    política, salvo quando houver obrigação legal de retenção.</p>
 
-                <h2>5. Política de Privacidade</h2>
-                <p>O envio de dados pessoais por meio do formulário de contato será tratado em conformidade com a Lei
-                    Geral de Proteção de Dados (LGPD – Lei nº 13.709/2018).</p>
-                <p>As informações fornecidas serão utilizadas exclusivamente para atendimento, suporte e comunicação com
-                    os usuários.</p>
-                <p>A Aratech Informática não compartilhará seus dados pessoais com terceiros sem autorização, salvo
-                    quando exigido por lei.</p>
+                <h2>5. Direitos do Usuário</h2>
+                <p>Em conformidade com a Lei Geral de Proteção de Dados (LGPD – Lei nº 13.709/2018), o usuário tem
+                    direito a:</p>
+                <p>- Confirmar a existência de tratamento de seus dados;<br>
+                    - Solicitar acesso, correção ou exclusão de seus dados pessoais;<br>
+                    - Revogar o consentimento fornecido a qualquer momento;<br>
+                    - Solicitar a portabilidade de seus dados a outro fornecedor de serviço.</p>
 
-                <h2>6. Alterações dos Termos</h2>
-                <p>Estes Termos de Uso podem ser alterados ou atualizados a qualquer momento, sem aviso prévio.</p>
-                <p>Recomendamos que o usuário consulte esta página periodicamente para verificar eventuais modificações.
-                </p>
+                <h2>6. Cookies</h2>
+                <p>Este site pode utilizar cookies para melhorar a experiência de navegação. O usuário pode configurar
+                    seu navegador para recusar ou apagar cookies, mas algumas funcionalidades do site podem ser
+                    prejudicadas.</p>
 
-                <h2>7. Contato</h2>
-                <p>Para esclarecimentos sobre estes Termos de Uso, o usuário pode entrar em contato por meio dos
-                    seguintes canais:</p>
+                <h2>7. Alterações na Política de Privacidade</h2>
+                <p>A Aratech Informática poderá atualizar esta Política de Privacidade periodicamente. Recomendamos que
+                    os usuários consultem esta página regularmente para verificar eventuais modificações.</p>
+
+                <h2>8. Contato</h2>
+                <p>Para dúvidas ou solicitações relacionadas à privacidade e proteção de dados, o usuário pode entrar em
+                    contato pelos seguintes canais:</p>
                 <p><strong>Endereço:</strong> R. Eng. Camilo Collier, 520 - Primavera, Arapiraca - AL, 57304-240</p>
                 <p><strong>E-mail:</strong> aratech.informatiac@gmail.com</p>
                 <p><strong>Telefone:</strong> (82) 3522-8300</p>
