modificado cores, estilos images etc

--- a/pages/politicas-privacidade.html
+++ b/pages/politicas-privacidade.html
@@ -23,7 +23,7 @@
         <header id="cabecalho">
             <nav>
                 <a href="../index.html">
-                    <img src="../assets/img/logo-aratech.png">
+                    <img src="../assets/img/images-alt/aratech-informatica.png">
                 </a>
                 <div class="nav-list">
                     <div class="menu-button">
@@ -119,19 +119,21 @@
             <div class="redes-sociais">
                 <h5 class="titulo-rodape">Redes sociais</h5>
                 <ul>
-                    <li><a href=""><img src="../assets/img/redes-sociais/facebook.png">
+                    <li><a href="https://www.facebook.com/senaialagoas" target="_blank"><img
+                                src="../assets/img/images-alt/icons/icons8-facebook-50.png">
                             <p>Facebook</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="../assets/img/redes-sociais/instagram.png">
+                    <li><a href="https://www.instagram.com/senaialagoas" target="_blank"><img
+                                src="../assets/img/images-alt/icons/icons8-instagram-50.png">
                             <p>Instagram</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="../assets/img/redes-sociais/whatsapp.png">
+                    <li><a href=""><img src="../assets/img/images-alt/icons/icons8-whatsapp-50.png">
                             <p>Whatsapp</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="../assets/img/redes-sociais/x.png">
+                    <li><a href=""><img src="../assets/img/images-alt/icons/icons8-x-50.png">
                             <p>X (antigo Twitter)</p>
                         </a>
                     </li>
