--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <header id="cabecalho">
             <nav>
                 <a href="index.html">
-                    <img src="./assets/img/logo-aratech.png">
+                    <img src="./assets/img/images-alt/aratech-informatica.png">
                 </a>
                 <div class="nav-list">
                     <div class="menu-button">
@@ -104,7 +104,7 @@
                 <div class="cursos-ti">
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-servico-de-ti.png">
+                            <img src="./assets/img/images-alt/icons/icons8-laptop-coding-50.png">
                             <h3>TÉCNICO EM INFORMÁTICA</h3>
                         </div>
                         <ul>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-frontend.png">
+                            <img src="./assets/img/images-alt/icons/icons8-html-5-50.png">
                             <h3>FRONT-END</h3>
                         </div>
                         <ul>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-backend.png">
+                            <img src="./assets/img/images-alt/icons/icons8-rest-api-50.png">
                             <h3>BACK-END</h3>
                         </div>
                         <ul>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-web-design.png">
+                            <img src="./assets/img/images-alt/icons/icons8-design-50.png">
                             <h3>DESIGN GRÁFICO</h3>
                         </div>
                         <ul>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-ia.png">
+                            <img src="./assets/img/images-alt/icons/icons8-robot-50.png">
                             <h3>INTELIGÊNCIA ARTIFICIAL</h3>
                         </div>
                         <ul>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="curso">
                         <div>
-                            <img src="./assets/img/img-programador.png">
+                            <img src="./assets/img/images-alt/icons/icons8-workstation-30.png">
                             <h3>PROGAMAÇÃO</h3>
                         </div>
                         <ul>
@@ -200,19 +200,19 @@
                                 <td>acesso a apostilas</td>
                                 <td></td>
                                 <td></td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
                             </tr>
                             <tr>
                                 <td>plano de estudo</td>
                                 <td></td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
                             </tr>
                             <tr>
                                 <td>acesso a vídeo aulas</td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
-                                <td><img src="./assets/img/visto-ok.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
+                                <td><img src="./assets/img/images-alt/icons/icons8-check-48.png"></td>
                             </tr>
                             <tr>
                                 <td>Valor</td>
@@ -234,27 +234,27 @@
                 <h2>GALERIA</h2>
                 <div class="galeria">
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/aulas-online.jpg">
+                        <img src="./assets/img/images-alt/estudo-remoto.webp">
                         <p>Assistindo uma de nossas aulas online</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/codigos-alunos.jpg">
+                        <img src="./assets/img/images-alt/linhas-codig.jpg">
                         <p>Linhas de códio de um de nossos alunos</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/trabalho-em-grupo.jpg">
+                        <img src="./assets/img/images-alt/trabalho-em-equipe.webp">
                         <p>Trabalho desenvolvido em grupo</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/alunos-ia.jpg">
+                        <img src="./assets/img/images-alt/alunos-com-ia.jpg">
                         <p>Figura de alunos usando inteligência artificial</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/site-start-up.jpg">
+                        <img src="./assets/img/images-alt/desenvolvendo-web.jpg">
                         <p>Desenvolvimento de web site para start-up</p>
                     </div>
                     <div class="galeria-card">
-                        <img src="./assets/img/galeria/trabalho-em-grupo-online.jpg">
+                        <img src="./assets/img/images-alt/aula-online.jpg">
                         <p>Trabalho desenvolvido em grupo online</p>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="image"><img src="./assets/img/codificando.jpg" alt=""></div>
+                    <div class="image"><img src="./assets/img/images-alt/image-formulario.jpg" alt=""></div>
                 </div>
             </section>
         </main>
@@ -313,20 +313,20 @@
                 <h5 class="titulo-rodape">Redes sociais</h5>
                 <ul>
                     <li><a href="https://www.facebook.com/senaialagoas" target="_blank"><img
-                                src="./assets/img/redes-sociais/facebook.png">
+                                src="./assets/img/images-alt/icons/icons8-facebook-50.png">
                             <p>Facebook</p>
                         </a>
                     </li>
                     <li><a href="https://www.instagram.com/senaialagoas" target="_blank"><img
-                                src="./assets/img/redes-sociais/instagram.png">
+                                src="./assets/img/images-alt/icons/icons8-instagram-50.png">
                             <p>Instagram</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/whatsapp.png">
+                    <li><a href=""><img src="./assets/img/images-alt/icons/icons8-whatsapp-50.png">
                             <p>Whatsapp</p>
                         </a>
                     </li>
-                    <li><a href=""><img src="./assets/img/redes-sociais/x.png">
+                    <li><a href=""><img src="./assets/img/images-alt/icons/icons8-x-50.png">
                             <p>X (antigo Twitter)</p>
                         </a>
                     </li>
@@ -341,13 +341,13 @@
             <p>Número: (82) 3522-8300</p>
         </div>
         <div class="termos">
-                <a href="./pages/termos-uso.html">
-                    <h5 class="titulo-rodape">Termos de Uso</h5>
-                </a>
-                <br>
-                <a href="./pages/politicas-privacidade.html">
-                    <h5 class="titulo-rodape">Política de Privacidade</h5>
-                </a>
+            <a href="./pages/termos-uso.html">
+                <h5 class="titulo-rodape">Termos de Uso</h5>
+            </a>
+            <br>
+            <a href="./pages/politicas-privacidade.html">
+                <h5 class="titulo-rodape">Política de Privacidade</h5>
+            </a>
             <p>© 2025 Todos os direitos resercados à Aratech Informática.</p>
             <p>Desenvolvido por <span>Vinícius Inocêncio</span></p>
         </div>
