--- a/pages/politicas-privacidade.html
+++ b/pages/politicas-privacidade.html
@@ -46,7 +46,8 @@
                 <p><strong>Última atualização: 18/08/2025</strong></p>
                 <p>A presente Política de Privacidade tem como objetivo explicar de forma clara e transparente como a
                     <strong>Aratech Informática</strong> coleta, utiliza, armazena e protege os dados pessoais
-                    fornecidos pelos usuários deste site.</p>
+                    fornecidos pelos usuários deste site.
+                </p>
 
                 <h2>1. Coleta de Informações</h2>
                 <p>Coletamos dados pessoais fornecidos voluntariamente pelo usuário, como nome, telefone, e-mail e
@@ -146,9 +147,20 @@
             <p>Arapiraca - AL, 57304-240</p>
             <p>E-mail: aratech.informatiac@gmail.com</p>
             <p>Número: (82) 3522-8300</p>
-            <p>Termos de Uso e Política de Privacidade</p>
+        </div>
+        <div class="termos">
+            <a href="./termos-uso.html">
+                <h5 class="titulo-rodape">Termos de Uso</h5>
+            </a>
+            <br>
+            <a href="./politicas-privacidade.html">
+                <h5 class="titulo-rodape">Política de Privacidade</h5>
+            </a>
+            <p>© 2025 Todos os direitos resercados à Aratech Informática.</p>
+            <p>Desenvolvido por <span>Vinícius Inocêncio</span></p>
         </div>
     </footer>
+
 
     <script src="../assets/js/menu.js"></script>
 </body>
