--- a/pages/termos-uso.html
+++ b/pages/termos-uso.html
@@ -101,7 +101,7 @@
         </main>
     </div>
 
-    <footer id="rodape">
+ <footer id="rodape">
         <div class="noticias">
             <h5 class="titulo-rodape">Últimas Notícias do Mundo Tec</h5>
             <ul>
@@ -146,9 +146,20 @@
             <p>Arapiraca - AL, 57304-240</p>
             <p>E-mail: aratech.informatiac@gmail.com</p>
             <p>Número: (82) 3522-8300</p>
-            <p>Termos de Uso e Política de Privacidade</p>
+        </div>
+        <div class="termos">
+            <a href="./termos-uso.html">
+                <h5 class="titulo-rodape">Termos de Uso</h5>
+            </a>
+            <br>
+            <a href="./politicas-privacidade.html">
+                <h5 class="titulo-rodape">Política de Privacidade</h5>
+            </a>
+            <p>© 2025 Todos os direitos resercados à Aratech Informática.</p>
+            <p>Desenvolvido por <span>Vinícius Inocêncio</span></p>
         </div>
     </footer>
+
 
     <script src="../assets/js/menu.js"></script>
 </body>
